Apply some PR review comments