@@ -41,7 +41,6 @@ import org.hamcrest.Matchers;
 
 import java.io.IOException;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Supplier;
 import java.util.function.UnaryOperator;
@@ -121,7 +120,7 @@ public class ActionModuleTests extends ESTestCase {
             usageService,
             null,
             mock(ClusterService.class),
-            Collections.emptyList()
+            List.of()
         );
         actionModule.initRestHandlers(null);
         // At this point the easiest way to confirm that a handler is loaded is to try to register another one on top of it and to fail
@@ -179,7 +178,7 @@ public class ActionModuleTests extends ESTestCase {
                 usageService,
                 null,
                 mock(ClusterService.class),
-                Collections.emptyList()
+                List.of()
             );
             Exception e = expectThrows(IllegalArgumentException.class, () -> actionModule.initRestHandlers(null));
             assertThat(e.getMessage(), startsWith("Cannot replace existing handler for [/] for method: GET"));
@@ -230,7 +229,7 @@ public class ActionModuleTests extends ESTestCase {
                 usageService,
                 null,
                 mock(ClusterService.class),
-                Collections.emptyList()
+                List.of()
             );
             actionModule.initRestHandlers(null);
             // At this point the easiest way to confirm that a handler is loaded is to try to register another one on top of it and to fail
@@ -276,7 +275,7 @@ public class ActionModuleTests extends ESTestCase {
                     usageService,
                     null,
                     mock(ClusterService.class),
-                    Collections.emptyList()
+                    List.of()
                 )
             );
             assertThat(
